updated the project to clearly log the messages