@@ -1,5 +1,6 @@
 package com.TicketingSystem;
 
+
 import java.util.LinkedList;
 import java.util.List;
 import java.util.logging.Logger;
@@ -8,22 +9,38 @@ public class TicketPool {
     private final List<Integer> tickets = new LinkedList<>();
     private final int maxCapacity;
     private int ticketIDNumber = 1;
+    private boolean isFull = false;
 
     private static final Logger logger = Logger.getLogger(TicketPool.class.getName());
+
 
     public TicketPool(int maxCapacity) {
         this.maxCapacity = maxCapacity;
     }
 
-    public synchronized boolean addTicket() {
-                if(tickets.size() >= maxCapacity) {
-                    logger.warning("Ticket with ID: "+ ticketIDNumber + " " + "cannot be added. Maximum reached " );
-                    return false;
-                }
-                tickets.add(ticketIDNumber);
-                logger.info(Thread.currentThread().getName() + " added ticket with ID" + " " + ticketIDNumber + " " + " to the pool");
-                ticketIDNumber++;
-                return true;
+    public int getTicketIDNumber() {
+        return ticketIDNumber;
+    }
+
+    public void setTicketIDNumber(int ticketIDNumber) {
+        this.ticketIDNumber = ticketIDNumber;
+    }
+
+    public  synchronized Boolean  addTicket() {
+        if(tickets.size() > maxCapacity) {
+            if(!isFull) {
+                isFull = true;
+                logger.warning("Ticket with ID: "+ ticketIDNumber + " " + "cannot be added. Maximum reached " );
+            }
+            return false;
+
+        }else{
+            tickets.add(ticketIDNumber);
+            logger.info(" New ticket with ID" + " " + ticketIDNumber + " " + " to the pool");
+            ticketIDNumber++;
+            return true;
+
+        }
     }
 
     public synchronized Integer removeTicket() {
@@ -36,7 +53,7 @@ public class TicketPool {
             }
             return null;
         }
-        Integer ticket = tickets.remove(0);
+        Integer ticket = tickets.removeFirst();
         logger.info("Ticket " + ticket + " " +  "removed successfully" + " " + "Remaining tickets in the pool:" +  " " + tickets.size());
         return ticket;
     }
@@ -49,4 +66,5 @@ public class TicketPool {
     public synchronized void notifyAllThreads(){
         notifyAll();
     }
+
 }
